--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "mapbox-gl": "^2.7.0",
     "vue": "^3.2.29"
   },
   "devDependencies": {
